trying to see the TPU memory

--- a/maskrcnn_effdet.ipynb
+++ b/maskrcnn_effdet.ipynb
@@ -3280,7 +3280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3293,7 +3293,7 @@
       "tensor([[1., 1., 1.],\n",
       "        [1., 1., 1.],\n",
       "        [1., 1., 1.]], device='xla:1')\n",
-      "/bin/bash: capture_tpu_profile: command not found\n"
+      "sudo: capture_tpu_profile: command not found\n"
      ]
     }
    ],
@@ -3312,7 +3312,7 @@
     "dev = xm.xla_device()\n",
     "t1 = torch.ones(3, 3, device = dev)\n",
     "print(t1)\n",
-    "!capture_tpu_profile --tpu=$TPU_NAME --monitoring_level=2"
+    "!capture_tpu_profile --tpu=\"imat\" --tpu_zone=\"europe-west4-a\" --gcp_project=\"imat\" --monitoring_level=2"
    ]
   },
   {
