coco_evaluator is also a problem probably

--- a/coco_visualize.ipynb
+++ b/coco_visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "753c210b",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Running on non Google Colab env\n",
       "loading annotations into memory...\n",
-      "Done (t=11.78s)\n",
+      "Done (t=11.70s)\n",
       "creating index...\n",
       "index created!\n",
       "loading annotations into memory...\n",
-      "Done (t=0.36s)\n",
+      "Done (t=0.37s)\n",
       "creating index...\n",
       "index created!\n",
       "Num of classes is [90]\n",
@@ -113,7 +114,8 @@
       "89      toothbrush\n",
       "90            none\n",
       "Getting rid of [1021] images with no labels\n",
-      "Dataset [train] contains [1000] images that have at least one instance\n"
+      "Dataset [train] contains [1000] images that have at least one instance\n",
+      "Memory usage [41.9]\n"
      ]
     }
    ],
@@ -130,12 +132,13 @@
     "dataset = coco_dataset.COCODataset(train_df, True, model_name, main_folder_path, target_dim, num_classes,\n",
     "                                        T.get_transform(train=True), False, False)\n",
     "# dataset_test = coco_dataset.COCODataset(test_df, False, model_name, main_folder_path, target_dim, num_classes,\n",
-    "#                                              T.get_transform(train=True), False)"
+    "#                                              T.get_transform(train=True), False)\n",
+    "print(\"Memory usage [{}]\".format(train.get_memory_usage()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "8447e5d6",
    "metadata": {
     "scrolled": false
@@ -146,18 +149,60 @@
      "output_type": "stream",
      "text": [
       "Using EffDet detection model\n",
-      "Freezing batch normalization weights\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'box_threshold' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-1808a14c43c0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     23\u001b[0m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msynchronize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mmodel_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mbox_threshold\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m         \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages_gpu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'box_threshold' is not defined"
+      "Freezing batch normalization weights\n",
+      "creating index...\n",
+      "index created!\n",
+      "Memory usage in eval [57.0] (0)\n",
+      "Test:  [  0/143]  eta: 0:04:23  model_time: 0.8016 (0.8016)  evaluator_time: 0.4701 (0.4701)  time: 1.8456  data: 0.5522  max mem: 952\n",
+      "Memory usage in eval [65.0] (10)\n",
+      "Memory usage in eval [66.4] (20)\n",
+      "Memory usage in eval [69.7] (30)\n",
+      "Memory usage in eval [71.6] (40)\n",
+      "Memory usage in eval [72.5] (50)\n",
+      "Memory usage in eval [72.7] (60)\n",
+      "Memory usage in eval [73.5] (70)\n",
+      "Memory usage in eval [74.2] (80)\n",
+      "Memory usage in eval [74.2] (90)\n",
+      "Memory usage in eval [75.2] (100)\n",
+      "Test:  [100/143]  eta: 0:00:53  model_time: 0.7257 (0.7328)  evaluator_time: 0.4647 (0.4876)  time: 1.2873  data: 0.0077  max mem: 952\n",
+      "Memory usage in eval [75.6] (110)\n",
+      "Memory usage in eval [76.4] (120)\n",
+      "Memory usage in eval [77.5] (130)\n",
+      "Memory usage in eval [78.2] (140)\n",
+      "Test:  [142/143]  eta: 0:00:01  model_time: 0.7169 (0.7287)  evaluator_time: 0.4661 (0.4803)  time: 1.2028  data: 0.0076  max mem: 952\n",
+      "Test: Total time: 0:02:57 (1.2397 s / it)\n",
+      "Averaged stats: model_time: 0.7169 (0.7287)  evaluator_time: 0.4661 (0.4803)\n",
+      "Accumulating evaluation results...\n",
+      "DONE (t=2.38s).\n",
+      "Accumulating evaluation results...\n",
+      "DONE (t=2.38s).\n",
+      "IoU metric: bbox\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=  1 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets= 10 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.000\n",
+      "IoU metric: segm\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=  1 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets= 10 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.000\n",
+      "Memory usage after loop [64.6]\n"
      ]
     }
    ],
@@ -166,8 +211,10 @@
     "import torch\n",
     "import utils\n",
     "import time\n",
+    "import engine\n",
     "\n",
     "device = 'cuda:0'\n",
+    "cpu_device = 'cpu'\n",
     "vis = visualize.Visualize(main_folder_path, categories_df, target_dim, dest_folder=None)\n",
     "\n",
     "def show_image_data_ground_truth(dataset, idx, is_colab, figsize=(40, 40)):\n",
@@ -181,25 +228,180 @@
     "\n",
     "model = train.get_model_instance_segmentation_efficientnet(model_name, num_classes, target_dim, freeze_batch_norm=True)\n",
     "model.to(device)\n",
-    "for images, targets in data_loader:\n",
-    "    images_gpu = list(img.to(device) for img in images)\n",
-    "    if torch.cuda.is_available():\n",
-    "        torch.cuda.synchronize()\n",
-    "    model_time = time.time()\n",
-    "    outputs = model(images_gpu, 0.0001)\n",
-    "\n",
-    "    # targets_cpu = [{k: v.to(cpu_device) if torch.is_tensor(v) else v for k, v in t.items()} for t in targets]\n",
-    "    outputs = [{k: v.to(cpu_device) for k, v in t.items()} for t in outputs]\n",
-    "    model_time = time.time() - model_time\n",
-    "    print(\"Memory usage [{}]\".format(train.get_memory_usage()))\n",
-    "    if train.get_memory_usage() > 70.0:\n",
-    "        break\n",
-    "\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    engine.evaluate(model, data_loader, device, box_threshold=0.3)  \n",
+    "print(\"Memory usage after loop [{}]\".format(train.get_memory_usage()))\n",
+    "            \n",
+    "            \n",
     "# print(\"Memory usage at iteration [{}] is [{}]\".format(0, train.get_memory_usage()))\n",
     "# for i in range(20):\n",
     "#     show_image_data_ground_truth(dataset, i, False)\n",
     "# #     img, tgt = dataset.__getitem__(i)\n",
     "#     print(\"Memory usage at iteration [{}] is [{}]\".format(i, train.get_memory_usage()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ebdae13c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memory usage [61.6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import gc\n",
+    "torch.cuda.empty_cache()\n",
+    "gc.collect()\n",
+    "print(\"Memory usage [{}]\".format(train.get_memory_usage()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d4e719b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using EffDet detection model\n",
+      "Freezing batch normalization weights\n",
+      "creating index...\n",
+      "index created!\n",
+      "Memory usage [69.5] coco_evaluator [48]\n",
+      "Memory usage [69.9] coco_evaluator [48]\n",
+      "Memory usage [70.5] coco_evaluator [48]\n",
+      "Memory usage [70.6] coco_evaluator [48]\n",
+      "Memory usage [70.8] coco_evaluator [48]\n",
+      "Memory usage [71.8] coco_evaluator [48]\n",
+      "Memory usage [72.1] coco_evaluator [48]\n",
+      "Memory usage [72.6] coco_evaluator [48]\n",
+      "Memory usage [72.9] coco_evaluator [48]\n",
+      "Memory usage [73.3] coco_evaluator [48]\n",
+      "Memory usage [74.2] coco_evaluator [48]\n",
+      "Memory usage [74.3] coco_evaluator [48]\n",
+      "Memory usage [75.1] coco_evaluator [48]\n",
+      "Memory usage [75.8] coco_evaluator [48]\n",
+      "Memory usage [76.1] coco_evaluator [48]\n",
+      "Memory usage [76.6] coco_evaluator [48]\n",
+      "Memory usage [76.9] coco_evaluator [48]\n",
+      "Memory usage [77.2] coco_evaluator [48]\n",
+      "Memory usage [78.2] coco_evaluator [48]\n",
+      "Memory usage [78.8] coco_evaluator [48]\n",
+      "Memory usage [79.8] coco_evaluator [48]\n",
+      "Memory usage [80.3] coco_evaluator [48]\n",
+      "Memory usage too high! [80.3]\n",
+      "Averaged stats: \n",
+      "Accumulating evaluation results...\n",
+      "DONE (t=0.43s).\n",
+      "Accumulating evaluation results...\n",
+      "DONE (t=0.43s).\n",
+      "IoU metric: bbox\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=  1 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets= 10 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.000\n",
+      "IoU metric: segm\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.000\n",
+      " Average Precision  (AP) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=  1 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets= 10 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= small | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.000\n",
+      " Average Recall     (AR) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import utils\n",
+    "import time\n",
+    "import torch\n",
+    "from coco_eval import CocoEvaluator\n",
+    "from coco_utils import get_coco_api_from_dataset\n",
+    "from sys import getsizeof\n",
+    "\n",
+    "device = 'cuda:0'\n",
+    "cpu_device = 'cpu'\n",
+    "data_loader = torch.utils.data.DataLoader(\n",
+    "            dataset, batch_size=7, shuffle=False, num_workers=2,\n",
+    "            collate_fn=utils.collate_fn)\n",
+    "\n",
+    "model = train.get_model_instance_segmentation_efficientnet(model_name, num_classes, target_dim, freeze_batch_norm=True)\n",
+    "model.to(device)\n",
+    "model.eval()\n",
+    "\n",
+    "\n",
+    "n_threads = torch.get_num_threads()\n",
+    "# FIXME remove this and make paste_masks_in_image run on the GPU\n",
+    "torch.set_num_threads(1)\n",
+    "cpu_device = torch.device(\"cpu\")\n",
+    "model.eval()\n",
+    "metric_logger = utils.MetricLogger(delimiter=\"  \")\n",
+    "header = 'Test:'\n",
+    "\n",
+    "coco = get_coco_api_from_dataset(data_loader.dataset, 0.001)\n",
+    "iou_types = [\"bbox\", \"segm\"]\n",
+    "coco_evaluator = CocoEvaluator(coco, iou_types)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for images, targets in data_loader:\n",
+    "        images_gpu = list(img.to(device) for img in images)\n",
+    "        if torch.cuda.is_available():\n",
+    "            torch.cuda.synchronize()\n",
+    "        model_time = time.time()\n",
+    "        outputs = model(images_gpu, 0.001)\n",
+    "\n",
+    "        # targets_cpu = [{k: v.to(cpu_device) if torch.is_tensor(v) else v for k, v in t.items()} for t in targets]\n",
+    "        outputs = [{k: v.to(cpu_device) for k, v in t.items()} for t in outputs]\n",
+    "        model_time = time.time() - model_time\n",
+    "            \n",
+    "        # targets_cpu = [{k: v.to(cpu_device) if torch.is_tensor(v) else v for k, v in t.items()} for t in targets]\n",
+    "        outputs = [{k: v.to(cpu_device) for k, v in t.items()} for t in outputs]\n",
+    "        model_time = time.time() - model_time\n",
+    "\n",
+    "        res = {target[\"image_id\"]: output for target, output in zip(targets, outputs)}  # ofekp: this used to be target[\"image_id\"].item()\n",
+    "        evaluator_time = time.time()\n",
+    "        coco_evaluator.update(res)\n",
+    "        evaluator_time = time.time() - evaluator_time\n",
+    "#         metric_logger.update(model_time=model_time, evaluator_time=evaluator_time)\n",
+    "        \n",
+    "        torch.cuda.empty_cache()\n",
+    "        print(\"Memory usage [{}] coco_evaluator [{}]\".format(train.get_memory_usage(), getsizeof(coco_evaluator)))\n",
+    "        if train.get_memory_usage() > 80.0:\n",
+    "            print(\"Memory usage too high! [{}]\".format(train.get_memory_usage()))\n",
+    "            break\n",
+    "            \n",
+    "# gather the stats from all processes\n",
+    "# metric_logger.synchronize_between_processes()\n",
+    "print(\"Averaged stats:\", metric_logger)\n",
+    "coco_evaluator.synchronize_between_processes()\n",
+    "\n",
+    "# accumulate predictions from all images\n",
+    "coco_evaluator.accumulate()\n",
+    "coco_evaluator.summarize()\n",
+    "torch.set_num_threads(n_threads)"
    ]
   }
  ],
